force-app/main/default/objects/Mapping_Config__c/Mapping_Config__c.object-meta.xml
<CustomObject>
    <label>Mapping Config</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>