force-app/main/default/objects/Mapping_Config__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>