force-app/main/default/objects/Mapping_Config__c/fields/JSON_Structure__c.field-meta.xml
<CustomField>
    <fullName>JSON_Structure__c</fullName>
    <label>JSON Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>